--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
         <div>
             <button class="reset">reset</button>
         </div>
+        <div class="iframe-container">
+            <iframe src=""></iframe>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
