--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         </textarea>
             <textarea class="css"  readonly>
             .slider-wrapper {
-                 width: 100%;
-                 height: 100%;
-                 position: absolute;
+                 width: 100px;
+                 height: 200px;
             }
              .slider-wrapper .slider-container {
                  height: calc(100% - 80px);
