--- a/index.html
+++ b/index.html
@@ -34,56 +34,64 @@
         </textarea>
             <textarea class="css"  readonly>
             .slider-wrapper {
-                 width: 100px;
-                 height: 200px;
-            }
-             .slider-wrapper .slider-container {
-                 height: calc(100% - 80px);
-                 position: relative;
-            }
-             .slider-wrapper .slider-container .slider {
-                 position: absolute;
-                 top: 50%;
-                 left: 50%;
-                 transform: translate(-50%, -50%);
-                 opacity: 0;
-                 transition: opacity 0.5s ease;
-                 z-index: 1;
-            }
-             .slider-wrapper .slider-container .slider.active {
-                 opacity: 1;
-                 z-index: 2;
-            }
-             .slider-wrapper .slider-container .slider h3 {
-                 text-align: center;
-                 font-weight: 600;
-                 padding-bottom: 10px;
-            }
-             .slider-wrapper .slider-container .slider div {
-                 width: 100%;
-            }
-             .slider-wrapper .slider-container .slider div img {
-                 max-width: 100%;
-                 max-height: 100%;
-                 display: block;
-                 margin: 0 auto;
-            }
-             .slider-wrapper .slider-nav-container {
-                 height: 50px;
-                 text-align: center;
-            }
-             .slider-wrapper .slider-nav-container span {
-                 border: 1px solid #000;
-                 border-radius: 10px;
-                 width: 6px;
-                 height: 6px;
-                 display: inline-block;
-                 margin: 3px;
-                 cursor: pointer;
-            }
-             .slider-wrapper .slider-nav-container span.active {
-                 background-color: #000;
-            }
+	 width: 300px;
+	 height: 400px;
+	 margin: 0 auto;
+}
+ .slider-wrapper .slider-container {
+	 width: 300px;
+	 height: 380px;
+	 position: relative;
+	 overflow: hidden;
+}
+ .slider-wrapper .slider-container .slider {
+	 position: absolute;
+	 top: 50%;
+	 left: 50%;
+	 transform: translate(-50%, -50%);
+	 opacity: 0;
+	 transition: opacity 0.5s ease;
+	 z-index: 1;
+	 width: 300px;
+}
+ .slider-wrapper .slider-container .slider.active {
+	 opacity: 1;
+	 z-index: 2;
+}
+ .slider-wrapper .slider-container .slider h3 {
+	 text-align: center;
+	 font-weight: 600;
+	 padding-bottom: 10px;
+}
+ .slider-wrapper .slider-container .slider div {
+	 width: 100%;
+}
+ .slider-wrapper .slider-container .slider div img {
+	 max-width: 100%;
+	 max-height: 100%;
+	 display: block;
+	 margin: 0 auto;
+}
+ .slider-wrapper .slider-container .slider p {
+	 text-align: center;
+}
+ .slider-wrapper .slider-nav-container {
+	 height: 20px;
+	 text-align: center;
+}
+ .slider-wrapper .slider-nav-container span {
+	 border: 1px solid #000;
+	 border-radius: 10px;
+	 width: 6px;
+	 height: 6px;
+	 display: inline-block;
+	 margin: 3px;
+	 cursor: pointer;
+}
+ .slider-wrapper .slider-nav-container span.active {
+	 background-color: #000;
+}
+ 
         </textarea>
             <textarea class="js"  readonly>
 
