--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </textarea>
             <textarea class="css"  readonly>
 .step-container {
-	 background: #02293b;
+	 background: #033D58;
 	 color: #fff;
 	 font-family: Open Sans;
 	 padding-top: 15px;
@@ -56,13 +56,13 @@
  .step-container .step-body div img {
 	 max-width: 100%;
 	 max-height: 100%;
-	 margin: 0 auto;
+	 margin: 0 auto 10px;
 	 display: block;
 }
  .step-container .step-body div.step-body-header {
 	 text-align: center;
 	 font-size: 16px;
-	 padding: 10px;
+ 	 padding: 10px 0px 10px 0px;
 	 font-weight: bold;
 }
  .step-container .step-body p {
@@ -71,7 +71,7 @@
 }
  .step-container .step-footer {
 	 padding: 15px;
-	 background: #1c3f4f;
+	 background: #ffffff44;
 	 border-radius: 0px 0px 5px 5px;
 }
  .step-container .step-footer button {
@@ -79,7 +79,8 @@
 	 border: none;
 	 outline: none;
 	 cursor: pointer;
-	 font-size: 17px;
+	 font-size: 13px;
+     font-weight: 600;
 	 color: #fff;
 }
  .step-container .step-footer div.step-nav {
@@ -118,9 +119,6 @@
 }
  .pull-right {
 	 float: right;
-}
- .pendo-tooltip-caret {
-	 border-right: 10px solid #02293b !important;
 }
 
 
